# db_settings

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
db_settings/: __init__.py  configuration.py  exceptions.py  log.py
db_settings/base/: __init__.py  asyn.py  base.py  sync.py
db_settings/base/field/: base.py
db_settings/base/settings/: __init__.py  asyn.py  sync.py
db_settings/db_drivers/: __init__.py  base.py  datas.py  redis.py  temps.py
db_settings/db_drivers/postgresql/: __init__.py  asyncpg_dr.py  postgres.py  psycopg_dr.py  querysets.py
db_settings/examples/: async_settings_example.py  bad_settings_example.py  settings_example.py
db_settings/fastapi/: __init__.py  asyncio.py  config.py  controller.py  sync.py  views.py
db_settings/test/: test_async_settings.py  test_sync_settings.py
db_settings/time/: converts.py  defaults.py
examples/: async_settings_example.py  bad_settings_example.py  settings_example.py
examples/fastapi_example/: main.py  settings.py
examples/sync_fastapi_example/: main.py  settings.py
